fix: line height for card header overflow

--- a/src/styles/isomer-cms/elements/card.scss
+++ b/src/styles/isomer-cms/elements/card.scss
@@ -19,6 +19,7 @@
       font-size: 20px;
       font-weight: normal;
       overflow-wrap: anywhere;
+      line-height: 2.0;
       color: darken($isomer-blue,20%);
     }
 
